# second-brain-v2

./: .env.example  .gitignore  .graphifyignore  .stignore  CONTRIBUTING.md  DOCS.md  LICENSE  MANUALE_OPERATORE.md  Makefile  Modelfile  PRESENTAZIONE_CLIENTI.html  README.md  agents.md  buonsenso.md  pyproject.toml  settings.md  telegram_memory.json  temctl --user restart secondbrain.service  test_agent.py  test_cap.py  test_config.py  test_query.py
.meeting_agent_cache/: embeddings.json
engine/: .rate_limits.json  briefing_daemon.py  dashboard.py  dream_daemon.py  git_ops.py  graphify_manager.py  ingest_agent.py  lint_agent.py  main.py  ontology_agent.py  ontology_history.json  plist_generator.py  query_agent.py  reflect_agent.py  setup_wizard.py  systemd_generator.py  telegram_bot.py  watcher.py
engine/.conversations/: traj-0245a62960830ba5b721586a216ee8c6  traj-0564220a54179958154f2d058bbbf3f5  traj-08354deb5f00de1657916cccd3902771  traj-09ae586eacdb7ad6dfcd1867664683c7  traj-0b4e0cbd5e59fc8e77782e4c99a819a2  traj-0e885af677a9c85573dc08fd232bcfee  traj-134926809ba6c6a083b730d75fab3062  traj-187e7bc021a878db7ba0d8e935bb9a38  traj-1be77baba94163488edc322ea4445434  traj-1cd1ffeafde6b8d46f7c57ede95eb3db  traj-1e30eca33fadaa5c1f5c1b6ce65eb831  traj-26d2647dd6bf901b100951f73ce64ede  traj-27fd4c89a9ed9e084ea0667842ff0a71  traj-29ce9d76e71919deeea830730261feab  traj-2b206d85ff80dce3dc75b3431d993101  traj-2ce2de3c852865c536c73eb0318a445f  traj-2d616ecd1149bbe07ab676e475353460  traj-32be796d1c6da1af93f79d4651e4405a  traj-40242c19b7da5b75602e654396b4ad4d  (+38 more)
(+52 files in other folders)
