[project]
name = "second-brain"
version = "0.1.0"
description = "LLM Wiki & Personal Knowledge Base with Google Antigravity SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-antigravity>=0.1.2",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "notion-client>=2.2.1",
    "pymupdf>=1.24.2",
    "python-docx>=1.1.0",
    "watchfiles>=0.21.0",
    "gitpython>=3.1.43",
    "croniter>=2.0.5",
    "python-telegram-bot>=20.0",
    "fastapi>=0.100.0",
    "mcp>=0.1.0",
    "imapclient>=3.0.1",
    "markdown>=3.6",
    "chromadb>=0.4.0",
    "google-genai>=0.1.0",
    "graphifyy",
    "openai",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["engine/tests"]
